spring forth commit

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
                     <li class="nav-item d-flex">
                         <i class="bi bi-person-plus-fill fs-3 text-light"></i>
                         <a class="nav-link active text-light fs-5" aria-current="page"
-                           th:text="${ }">User</a>
+                           th:text="${username}">User</a>
                     </li>
                 </ul>
             </div>
